@@ -201,6 +201,29 @@ public class RegistrationResult {
     return Optional.ofNullable(authenticatorExtensionOutputs);
   }
 
+  /**
+   * Try to determine whether the created credential is a <a
+   * href="https://www.w3.org/TR/2021/REC-webauthn-2-20210408/#discoverable-credential">discoverable
+   * credential</a>, using the output from the <a
+   * href="https://www.w3.org/TR/2021/REC-webauthn-2-20210408/#sctn-authenticator-credential-properties-extension">
+   * <code>credProps</code></a> extension.
+   *
+   * @return A present <code>true</code> if the created credential is discoverable. A present <code>
+   *     false</code> if the created credential is not discoverable. An empty value if it is not
+   *     known whether the created credential is discoverable.
+   * @see <a
+   *     href="https://www.w3.org/TR/2021/REC-webauthn-2-20210408/#dom-credentialpropertiesoutput-rk">§10.4.
+   *     Credential Properties Extension (credProps), "rk" output</a>
+   * @see <a
+   *     href="https://www.w3.org/TR/2021/REC-webauthn-2-20210408/#discoverable-credential">Discoverable
+   *     Credential</a>
+   */
+  public Optional<Boolean> isDiscoverable() {
+    return getClientExtensionOutputs()
+        .flatMap(outputs -> outputs.getCredProps())
+        .flatMap(credProps -> credProps.getRk());
+  }
+
   static RegistrationResultBuilder.MandatoryStages builder() {
     return new RegistrationResultBuilder.MandatoryStages();
   }
